# wis-core

./: .gitignore  CMakeLists.txt  README.md  exceptions.hpp  index.cpp  index_server.proto  main.cpp  server.cpp  server.hpp  stagedb.cpp  stagedb.hpp  trie.cpp
cmake_modules/: FindRPCZ.cmake  rpcz_functions.cmake
feeder/: .gitignore  extract.py  feed.py  gen.py  nlp.py  parse_wiki.py  search.py
gentoo-overlay/dev-libs/protobuf/: Manifest  protobuf-9999.ebuild
gentoo-overlay/dev-libs/protobuf/files/: protobuf-9999-typo.patch
gentoo-overlay/dev-python/nltk/: Manifest  nltk-2.0.1-r1.ebuild
gentoo-overlay/dev-python/nltk/files/: nltk-2.0.1-len.patch
gentoo-overlay/net-libs/rpcz/: Manifest  rpcz-9999.ebuild
gentoo-overlay/net-libs/rpcz/files/: rpcz-9999-fix-header-install.patch  rpcz-9999-not-install-tests.patch  rpcz-9999-python3.patch  rpcz-9999-zmqpp.patch
gentoo-overlay/net-libs/zmqpp/: Manifest  zmqpp-9999.ebuild
indexer/: CMakeLists.txt  exceptions.hpp  fuzzy_processor.cpp  fuzzy_processor.hpp  index.cpp  index.hpp  index_builder.cpp  index_builder.hpp  index_search.cpp  index_search.hpp  main.cpp  partstat.cpp  server.cpp  server.hpp  stagedb.cpp  stagedb.hpp  store_manager.cpp  store_manager.hpp  trie.cpp  trie.hpp  trie_layout.hpp  value_db.cpp  value_db.hpp
python/: dict.py  extract.py  feed.py  nlp.py  search.py  utils.py
